[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/fonts/font_material.tres" type="Material" id=1]
[ext_resource path="res://board/interactive_parts/slots.gd" type="Script" id=2]
[ext_resource path="res://board/interactive_parts/slot.tscn" type="PackedScene" id=3]
[ext_resource path="res://board/ui/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://board/moving_parts/switch.tscn" type="PackedScene" id=5]
[ext_resource path="res://board/fixed_parts/score_slot.tscn" type="PackedScene" id=6]
[ext_resource path="res://board/board.gd" type="Script" id=7]
[ext_resource path="res://assets/sprites/game/board.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/game/slots.png" type="Texture" id=9]
[ext_resource path="res://board/ui/turn_system.gd" type="Script" id=10]
[ext_resource path="res://assets/sprites/ui/background.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/ui/transition_background.png" type="Texture" id=12]
[ext_resource path="res://assets/fonts/tinypixel.otf" type="DynamicFontData" id=13]
[ext_resource path="res://board/ui/round_transition.gd" type="Script" id=14]
[ext_resource path="res://board/moving_parts/coins.gd" type="Script" id=15]
[ext_resource path="res://board/fixed_parts/bottom_slots.gd" type="Script" id=16]

[sub_resource type="Animation" id=13]
resource_name = "Highlight"
length = 2.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 0, 8, 7, 6, 5, 4, 3, 2, 1, 0, 9, 0, 9, 0, 9 ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="DynamicFont" id=17]
resource_local_to_scene = true
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 13 )

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 180, 320 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:margin_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 360.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=19]
resource_name = "RoundChange"
length = 2.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.5, 2.1, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 540, 320 ), Vector2( 180, 320 ), Vector2( 180, 320 ), Vector2( -180, 320 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.6, 0.9, 2.1, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 360.0, 360.0, 56.0, -21.0002, -360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:margin_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3, 0.6, 0.9, 2.1, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 720.0, 720.0, 416.0, 339.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Board" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 180, 320 )
texture = ExtResource( 11 )

[node name="Board" type="Sprite" parent="."]
position = Vector2( 180, 360 )
texture = ExtResource( 8 )

[node name="Slots" type="Node2D" parent="."]
position = Vector2( 180, 152 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Slots"]
texture = ExtResource( 9 )
vframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="Slots"]
playback_speed = 0.5
anims/Highlight = SubResource( 13 )
anims/RESET = SubResource( 14 )

[node name="Slot1" parent="Slots" instance=ExtResource( 3 )]
position = Vector2( -70, 0 )

[node name="Slot2" parent="Slots" instance=ExtResource( 3 )]
position = Vector2( -50, 0 )

[node name="Slot3" parent="Slots" instance=ExtResource( 3 )]
position = Vector2( -30, 0 )

[node name="Slot4" parent="Slots" instance=ExtResource( 3 )]
position = Vector2( -10, 0 )

[node name="Slot5" parent="Slots" instance=ExtResource( 3 )]
position = Vector2( 10, 0 )

[node name="Slot6" parent="Slots" instance=ExtResource( 3 )]
position = Vector2( 30, 0 )

[node name="Slot7" parent="Slots" instance=ExtResource( 3 )]
position = Vector2( 50, 0 )

[node name="Slot8" parent="Slots" instance=ExtResource( 3 )]
position = Vector2( 70, 0 )

[node name="Switches" type="Node2D" parent="."]
position = Vector2( 20, 200 )

[node name="Row1" type="Node2D" parent="Switches"]
position = Vector2( 100, 19 )

[node name="Switch1" parent="Switches/Row1" instance=ExtResource( 5 )]

[node name="Switch2" parent="Switches/Row1" instance=ExtResource( 5 )]
position = Vector2( 40, 0 )

[node name="Switch3" parent="Switches/Row1" instance=ExtResource( 5 )]
position = Vector2( 80, 0 )

[node name="Switch4" parent="Switches/Row1" instance=ExtResource( 5 )]
position = Vector2( 120, 0 )

[node name="Row2" type="Node2D" parent="Switches"]
position = Vector2( 80, 99 )

[node name="Switch1" parent="Switches/Row2" instance=ExtResource( 5 )]

[node name="Switch2" parent="Switches/Row2" instance=ExtResource( 5 )]
position = Vector2( 40, 0 )

[node name="Switch3" parent="Switches/Row2" instance=ExtResource( 5 )]
position = Vector2( 80, 0 )

[node name="Switch4" parent="Switches/Row2" instance=ExtResource( 5 )]
position = Vector2( 120, 0 )

[node name="Switch5" parent="Switches/Row2" instance=ExtResource( 5 )]
position = Vector2( 160, 0 )

[node name="Row3" type="Node2D" parent="Switches"]
position = Vector2( 60, 179 )

[node name="Switch1" parent="Switches/Row3" instance=ExtResource( 5 )]

[node name="Switch2" parent="Switches/Row3" instance=ExtResource( 5 )]
position = Vector2( 40, 0 )

[node name="Switch3" parent="Switches/Row3" instance=ExtResource( 5 )]
position = Vector2( 80, 0 )

[node name="Switch4" parent="Switches/Row3" instance=ExtResource( 5 )]
position = Vector2( 120, 0 )

[node name="Switch5" parent="Switches/Row3" instance=ExtResource( 5 )]
position = Vector2( 160, 0 )

[node name="Switch6" parent="Switches/Row3" instance=ExtResource( 5 )]
position = Vector2( 200, 0 )

[node name="Row4" type="Node2D" parent="Switches"]
position = Vector2( 40, 259 )

[node name="Switch1" parent="Switches/Row4" instance=ExtResource( 5 )]

[node name="Switch2" parent="Switches/Row4" instance=ExtResource( 5 )]
position = Vector2( 40, 0 )

[node name="Switch3" parent="Switches/Row4" instance=ExtResource( 5 )]
position = Vector2( 80, 0 )

[node name="Switch4" parent="Switches/Row4" instance=ExtResource( 5 )]
position = Vector2( 120, 0 )

[node name="Switch5" parent="Switches/Row4" instance=ExtResource( 5 )]
position = Vector2( 160, 0 )

[node name="Switch6" parent="Switches/Row4" instance=ExtResource( 5 )]
position = Vector2( 200, 0 )

[node name="Switch7" parent="Switches/Row4" instance=ExtResource( 5 )]
position = Vector2( 240, 0 )

[node name="Row5" type="Node2D" parent="Switches"]
position = Vector2( 20, 339 )

[node name="Switch1" parent="Switches/Row5" instance=ExtResource( 5 )]

[node name="Switch2" parent="Switches/Row5" instance=ExtResource( 5 )]
position = Vector2( 41, 0 )

[node name="Switch3" parent="Switches/Row5" instance=ExtResource( 5 )]
position = Vector2( 80, 0 )

[node name="Switch4" parent="Switches/Row5" instance=ExtResource( 5 )]
position = Vector2( 120, 0 )

[node name="Switch5" parent="Switches/Row5" instance=ExtResource( 5 )]
position = Vector2( 160, 0 )

[node name="Switch6" parent="Switches/Row5" instance=ExtResource( 5 )]
position = Vector2( 200, 0 )

[node name="Switch7" parent="Switches/Row5" instance=ExtResource( 5 )]
position = Vector2( 240, 0 )

[node name="Switch8" parent="Switches/Row5" instance=ExtResource( 5 )]
position = Vector2( 280, 0 )

[node name="BottomSlots" type="Node2D" parent="."]
position = Vector2( 30, 587 )
script = ExtResource( 16 )

[node name="ScoreSlot1" parent="BottomSlots" instance=ExtResource( 6 )]
scores = [ 2, 34, 9, 64 ]

[node name="ScoreSlot2" parent="BottomSlots" instance=ExtResource( 6 )]
position = Vector2( 20, 0 )
scores = [ 2, 21, 8, 49 ]

[node name="ScoreSlot3" parent="BottomSlots" instance=ExtResource( 6 )]
position = Vector2( 40, 0 )
scores = [ 2, 13, 7, 36 ]

[node name="ScoreSlot4" parent="BottomSlots" instance=ExtResource( 6 )]
position = Vector2( 61, 0 )
scores = [ 2, 8, 6, 25 ]

[node name="ScoreSlot5" parent="BottomSlots" instance=ExtResource( 6 )]
position = Vector2( 80, 0 )
scores = [ 2, 5, 5, 16 ]

[node name="ScoreSlot6" parent="BottomSlots" instance=ExtResource( 6 )]
position = Vector2( 100, 0 )
scores = [ 2, 3, 4, 9 ]

[node name="ScoreSlot7" parent="BottomSlots" instance=ExtResource( 6 )]
position = Vector2( 120, 0 )
scores = [ 2, 2, 3, 4 ]

[node name="ScoreSlot8" parent="BottomSlots" instance=ExtResource( 6 )]
position = Vector2( 140, 0 )
scores = [ 2, 1, 2, 1 ]

[node name="ScoreSlot9" parent="BottomSlots" instance=ExtResource( 6 )]
position = Vector2( 160, 0 )
scores = [ 2, 1, 2, 1 ]

[node name="ScoreSlot10" parent="BottomSlots" instance=ExtResource( 6 )]
position = Vector2( 180, 0 )
scores = [ 2, 2, 3, 4 ]

[node name="ScoreSlot11" parent="BottomSlots" instance=ExtResource( 6 )]
position = Vector2( 200, 0 )
scores = [ 2, 3, 4, 9 ]

[node name="ScoreSlot12" parent="BottomSlots" instance=ExtResource( 6 )]
position = Vector2( 220, 0 )
scores = [ 2, 5, 5, 16 ]

[node name="ScoreSlot13" parent="BottomSlots" instance=ExtResource( 6 )]
position = Vector2( 240, 0 )
scores = [ 2, 8, 6, 25 ]

[node name="ScoreSlot14" parent="BottomSlots" instance=ExtResource( 6 )]
position = Vector2( 260, 0 )
scores = [ 2, 13, 7, 36 ]

[node name="ScoreSlot15" parent="BottomSlots" instance=ExtResource( 6 )]
position = Vector2( 280, 0 )
scores = [ 2, 21, 8, 49 ]

[node name="ScoreSlot16" parent="BottomSlots" instance=ExtResource( 6 )]
position = Vector2( 300, 0 )
scores = [ 2, 34, 9, 64 ]

[node name="Coins" type="Node2D" parent="."]
script = ExtResource( 15 )

[node name="RoundTransition" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="RoundTransition"]
position = Vector2( 180, 320 )
scale = Vector2( 22.5, 3 )
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="RoundTransition"]
material = ExtResource( 1 )
margin_top = 303.0
margin_right = 360.0
margin_bottom = 343.0
custom_fonts/font = SubResource( 17 )
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="RoundTransition"]
anims/RESET = SubResource( 18 )
anims/RoundChange = SubResource( 19 )

[node name="TurnSystem" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 10 )

[node name="Player1" parent="TurnSystem" instance=ExtResource( 4 )]
margin_left = 24.0
margin_top = 24.0
margin_right = 88.0
margin_bottom = 88.0
player_name = "PLAYER ONE"

[node name="Scoreboard" parent="TurnSystem/Player1" index="0"]
position = Vector2( 28, 56 )

[node name="PlayerName" parent="TurnSystem/Player1" index="2"]
margin_left = -2.0
margin_top = 26.0
margin_right = 58.0
margin_bottom = 40.0

[node name="Score" parent="TurnSystem/Player1" index="3"]
margin_left = -2.0
margin_top = 40.0
margin_right = 58.0
margin_bottom = 86.0

[node name="CoinMeter" parent="TurnSystem/Player1" index="4"]
margin_top = 115.0
margin_bottom = 219.0

[node name="Player2" parent="TurnSystem" instance=ExtResource( 4 )]
margin_left = 272.0
margin_top = 24.0
margin_right = 336.0
margin_bottom = 88.0
player_name = "PLAYER TWO"

[node name="Scoreboard" parent="TurnSystem/Player2" index="0"]
position = Vector2( 36, 56 )

[node name="PlayerName" parent="TurnSystem/Player2" index="2"]
margin_left = 6.0
margin_top = 26.0
margin_right = 66.0
margin_bottom = 40.0

[node name="Score" parent="TurnSystem/Player2" index="3"]
margin_left = 6.0
margin_top = 40.0
margin_right = 66.0
margin_bottom = 86.0

[node name="CoinMeter" parent="TurnSystem/Player2" index="4"]
margin_left = 28.0
margin_top = 115.0
margin_right = 48.0
margin_bottom = 219.0

[connection signal="board_ready" from="." to="Slots" method="_on_Board_board_ready"]
[connection signal="board_ready" from="." to="BottomSlots" method="_on_Board_board_ready"]
[connection signal="board_ready" from="." to="RoundTransition" method="_on_Board_board_ready"]
[connection signal="board_ready" from="." to="TurnSystem" method="_on_Board_board_ready"]
[connection signal="board_ready" from="." to="TurnSystem/Player1" method="_on_Board_board_ready"]
[connection signal="board_ready" from="." to="TurnSystem/Player2" method="_on_Board_board_ready"]
[connection signal="no_moving_coins" from="Coins" to="TurnSystem" method="_on_Coins_no_moving_coins"]
[connection signal="game_over" from="TurnSystem" to="." method="_on_TurnSystem_game_over"]
[connection signal="game_over" from="TurnSystem" to="Slots" method="_on_TurnSystem_game_over"]
[connection signal="round_ended" from="TurnSystem" to="BottomSlots" method="_on_TurnSystem_round_ended"]
[connection signal="round_ended" from="TurnSystem" to="RoundTransition" method="_on_TurnSystem_round_ended"]
[connection signal="round_ended" from="TurnSystem" to="TurnSystem/Player1" method="_on_TurnSystem_round_ended"]
[connection signal="round_ended" from="TurnSystem" to="TurnSystem/Player2" method="_on_TurnSystem_round_ended"]
[connection signal="turn_ready" from="TurnSystem" to="Slots" method="_on_TurnSystem_turn_ready"]

[editable path="TurnSystem/Player1"]
[editable path="TurnSystem/Player2"]
